--- a/cv.tex
+++ b/cv.tex
@@ -34,11 +34,11 @@
 \firstname{Gastón}
 \familyname{Kleiman}
 \title{Software Engineer}
-\address{Virrey Arredondo 2631 5A}{C1426DZI Capital Federal, Argentina}
-\mobile{+54 911 6370 1275}
+\address{c/o Müller Lohidoy\\Herrfurthstraße 33}{12049 Berlin, Deutschland}
+\mobile{+49 152-01391500}
 \email{gaston.kleiman@gmail.com}
 \homepage{github.com/gkleiman}
-\extrainfo{Nationality: Argentine and German Citizenship}
+\extrainfo{Nationality: German and Argentine Citizenships}
 % \quote{Some quote (optional)}
 
 % uncomment to suppress automatic page numbering for CVs longer than one page
@@ -53,53 +53,55 @@
 Buenos Aires}{Argentina}{}{Final Project:
 \weblink{https://github.com/gkleiman/wide}{wIDE} (Web Integrated Development
 Environment).}
-\cventry{2008 -- 2009\\ Sep \ \ \ \ \ Feb}{Research Project at the
+\cventry{2008 -- 2009\\ Sep -- Feb}{Research Project at the
 \weblink{http://www.ibr.cs.tu-bs.de/dus/index.html}{Institute of Distributed
 and Ubiquitous Systems}}{Technische Universität
 Braunschweig}{Germany}{}{Participated in a research project on collaborative
 transmission in wireless sensor networks using feedback based distributed
 adaptive beamforming.\\Simulated and evaluated different synchronization and
 clustering approaches using MATLAB.}
-\cventry{2001\\$4^{1/2}$ months}{Study Abroad}{Gymnasium
-Kaiser-Friedrich-Ufer}{Hamburg}{Germany}{Lived with a German family and
-attended school.}
-
-\section{Languages}
-\cvlanguage{English}{Fluent}{First Certificate Exam (passed with grade A),
-Cambridge, 2001}
-\cvlanguage{Spanish}{Native}{}
-\cvlanguage{German}{Fluent}{Deutsches Sprachdiplom der KMK Stufe II, 2002}
 
 \section{Professional Experience}
-\cvline{Jul 2012 -- current}{\textbf{Software Engineer (Contractor)},
-\emph{\weblink{http://linkedin.com}{LinkedIn}}}
+\cventry{2012 -- 2013\\ Jul -- Apr}{Software Engineer}
+{\weblink{http://linkedin.com/}{LinkedIn} (Contractor)}{Buenos Aires, Argentina}{}{%
+\begin{itemize}
+  \item Worked on an internal application that provides live analytics.
+  \item Created a prototype of a system to be used for capacity planning.
+  \item Technologies: Java, CoffeeScript, Backbone.js, Bootstrap, Apache Kafka,
+    Apache Pig, Apache Hadoop, MySQL, Teradata.
+\end{itemize}
+}
 %
 \cventry{2012 -- 2012\\ May -- Jul}{Android Developer}
 {\weblink{http://etermax.com/}{Etermax S.A.}}{Buenos Aires, Argentina}{}{%
-  Short gig developing a game similar to
-  \weblink{https://play.google.com/store/apps/details?id=com.zynga.scramble}{Zynga's Scramble with Friends}
-}
+Short gig working on
+\weblink{https://play.google.com/store/apps/details?id=com.etermax.wordcrack.lite}{Word
+Crack}, a multiplayer and multilanguage game similar to Zynga's Scramble.}
 %
 \cventry{2011 -- 2012\\ Aug -- Apr}{Business Intelligence \& Data
 Warehouses - Corporate Engineering}
 {\weblink{http://www.google.com}{Google} (Vendor),
 \weblink{http://www.globant.com}{Globant}}{Buenos Aires, Argentina}{}{%
 \begin{itemize}
-  \item Develop ETL pipelines in Java for large scale datasets using
+  \item Developed ETL pipelines in Java for large scale datasets using
 proprietary distributed computing libraries (MapReduce) deployed on Google's
 cloud infrastructure.
-  \item Implement/Maintain several executive dashboards using proprietary
+  \item Implemented/Maintained several executive dashboards using proprietary
 JavaScript/AJAX data visualization libraries and Data Warehouses.
-  \item Maintain a real-time Python/Java Business Intelligence platform to
+  \item Maintained a real-time Python/Java Business Intelligence platform to
 monitor credit exposure and revenue risk.
   \item Release management for the Financial Datawarehouse Pipelines.
 \end{itemize}
 }
 %
-\cvline{1999 -- current}{\textbf{Freelance Independent Software Engineer}.
-Working in projects such as small websites development.}
+\cventry{2010}{Undergrad Teaching Assistant}
+{Universidad de Buenos Aires}{Buenos Aires, Argentina}{}{%
+\begin{itemize}%
+  \item ``Algorithms and Programming I'' and ``Algorithms and Programming II''.
+\end{itemize}
+}
 %
-\cventry{2009 -- 2010\\ Oct \ \ \ \ \ Jun}{Software Engineer}
+\cventry{2009 -- 2010\\ Oct -- Jun}{Software Engineer}
 {\weblink{http://www.3dgames.com.ar}{3DGames}}{Buenos Aires, Argentina}{}{%
 \begin{itemize}
   \item Migrated the web site of \weblink{http://club.speedy.com.ar}{Club
@@ -119,21 +121,7 @@ Working in projects such as small websites development.}
 \end{itemize}
 }
 %
-\cventry{2010}{Undergrad Teaching Assistant}
-{Universidad de Buenos Aires}{Buenos Aires, Argentina}{}{%
-\begin{itemize}%
-  \item ``Algorithms and Programming I'' and ``Algorithms and Programming II''.
-\end{itemize}
-}
-%
-\cventry{2009\\ Jan -- Mar}{Research Assistant}
-{TU Braunschweig}{Braunschweig, Germany}{}{%
-Wrote an Installation and Basic Usage Guide for the Universal Software Radio
-Peripheral (\weblink{http://www.ettus.com/products}{USRP\texttrademark}) and
-GNU Radio.
-}
-%
-\cventry{2007 -- 2008\\ Jul \ \ \ \ \ Aug}{Java Developer / Consultant}
+\cventry{2007 -- 2008\\ Jul -- Aug}{Java Developer / Consultant}
 {\weblink{http://www.newtechnologies.com.ar}{New Technologies S.R.L.}}{Buenos
 Aires, Argentina}{}{%
 Participated in a team developing Java applications, and
@@ -143,8 +131,8 @@ worked as an internal and external consultant.
     Procurement Process of the \weblink{http://www.telefonica.com/}{``Grupo
     Telefónica''} in Argentina.  Tools used: jBPM, Tapestry, Spring, Hibernate,
     HttpUnit (for web scraping).
-  \item Implemented prototype applications on J2EE in order to evaluate the
-    adoption of different technologies (JavaServer Faces and Mule).
+  %\item Implemented prototype applications on J2EE in order to evaluate the
+    %adoption of different technologies (JavaServer Faces and Mule).
 \end{itemize}
 }
 
@@ -162,13 +150,15 @@ worked as an internal and external consultant.
 
 \section{Technical Skills}
 \cvskill{Proficient in:}{Java, Python, GNU/Linux.}
-\cvskill{Acquainted with:}{Ruby, C, C++, JavaScript, SQL, HTML, CSS.}
+\cvskill{Acquainted with:}{Ruby, CoffeeScript, JavaScript, C, C++, SQL, HTML, CSS.}
 \cvline{Worked with:}{%
   \begin{minipage}[t]{\linewidth}\small
     \begin{itemize}
+      \item Ruby On Rails, RSpec, jQuery, jQuery UI.
+      \item Backbone.js, Bootstrap.
+      \item Apache Hadoop, Apache Pig, Apache Kafka.
       \item Google Proprietary Technology.
       \item Android SDK.
-      \item Ruby On Rails, RSpec, jQuery, jQuery UI.
       \item Perforce, git, darcs, svn, Mercurial.
       \item Bash, Eclipse, Vim, JUnit, Apache 2, Apache Tomcat, MySQL.
     \end{itemize}
@@ -197,11 +187,18 @@ of Design Patterns and UML.}
 % \item Basic knowledge of the Android SDK and mobile programming.
 % \end{itemize}
 
+\section{Languages}
+\cvlanguage{English}{Fluent}{First Certificate Exam (passed with grade A),
+Cambridge, 2001}
+\cvlanguage{German}{Advanced}{Deutsches Sprachdiplom der KMK Stufe II, 2002}
+\cvlanguage{Spanish}{Native}{}
+
 \section{Contributions to FLOSS Projects}
 \cvline{}{Contributed to popular FLOSS (Open--Source) projects including:}
 \cvlistdoubleitem{\mbox{\weblink{http://mercurial.selenic.com/}{Mercurial}}}{%
 \mbox{\weblink{http://ace.ajax.org/}{ACE (Ajax.org Text Editor)}}}
-\cvlistitem{\mbox{\weblink{http://github.com/fesplugas/typus}{Typus}}}
+\cvlistdoubleitem{\mbox{\weblink{http://github.com/fesplugas/typus}{Typus}}}{%
+\mbox{\weblink{https://github.com/linkedin/Backbone.TableView}{Backbone.Tableview}}}
 
 \section{Personal Projects}
 \cvskill{\mbox{\weblink{https://github.com/gkleiman/wide}{wIDE}}\\2010 --
@@ -222,7 +219,5 @@ Service (DAAD) to do research work at the TU Braunschweig}{Germany}{}{}{}{}
 \cventry{2001}{Argentinian National Olympiad of Chemistry (OAQ)}{Bronze medal}{}{}{}{}
 
 \section{Hobbies}
-\cvlistitem{Cinema, Photography and Cooking.}
-\cvlistitem{Tweaking and tunning my development environment, constantly
-discovering new features in my favourite editor (Vim) and trying new tools.}
+\cvlistitem{Traveling, Cinema, Photography and Cooking.}
 \end{document}
