--- a/cv.tex
+++ b/cv.tex
@@ -21,7 +21,7 @@
 % personal data
 \name{Gastón}{Kleiman}
 \title{Software Engineer}
-\address{c/o Müller Lohidoy\\Herrfurthstraße 33\\12049 Berlin}{Deutschland}
+\address{c/o Pivaral\\Ernst-Grube-Str. 21\\12555 Berlin}{Deutschland}
 \phone[mobile]{+49 152-01391500}
 \email{gaston.kleiman@gmail.com}
 \social[github]{gkleiman}
