Added description of work at Amazon
- Update personal information.
- Add some details about my current position, based on the public job
  description.
- Misc updates to make everything fit in 2 pages.
- Add the compiled pdf, so that I can link to it.

--- a/cv.tex
+++ b/cv.tex
@@ -21,8 +21,8 @@
 % personal data
 \name{Gastón}{Kleiman}
 \title{Software Engineer}
-\address{c/o Pivaral\\Ernst-Grube-Str. 21\\12555 Berlin}{Deutschland}
-\phone[mobile]{+49 152-01391500}
+\address{Boxhagener Str. 119b\\10245 Berlin}{Deutschland}
+\phone[mobile]{+49 152/52825798}
 \email{gaston.kleiman@gmail.com}
 \social[github]{gkleiman}
 \social[linkedin]{gkleiman}
@@ -48,8 +48,20 @@ adaptive beamforming.\\Simulated and evaluated different synchronization and
 clustering approaches using MATLAB.}
 
 \section{Professional Experience}
+\cventry{2013 -- Present\\ Jul -- Present}{Software Development Engineer}
+{\weblink{http://aws.amazon.com/}{Amazon Web Services}}{Berlin, Germany}{}{%
+Member of the team responsible for \weblink{http://aws.amazon.com/opsworks/}{AWS OpsWorks},
+a highly scalable distributed system that powers thousands of servers.
+\begin{itemize}
+  \item Responsible for architecting and developing new features, for
+    maintaining and refactoring core components, as well as for operating all
+    the back-end components.
+  \item Technologies: Ruby, AWS (EC2, DynamoDB, SWF, SQS, RDS, others), Java.
+\end{itemize}
+}
+%
 \cventry{2012 -- 2013\\ Jul -- Apr}{Software Engineer}
-{\weblink{http://linkedin.com/}{LinkedIn} (Contractor)}{Buenos Aires, Argentina}{}{%
+{\weblink{http://linkedin.com/}{LinkedIn}}{Buenos Aires, Argentina}{}{%
 \begin{itemize}
   \item Worked on an internal application that provides live analytics.
   \item Created a prototype of a system to be used for capacity planning.
@@ -62,16 +74,18 @@ clustering approaches using MATLAB.}
 {\weblink{http://etermax.com/}{Etermax S.A.}}{Buenos Aires, Argentina}{}{%
 Short gig working on
 \weblink{https://play.google.com/store/apps/details?id=com.etermax.wordcrack.lite}{Word
-Crack}, a multiplayer and multilanguage game similar to Zynga's Scramble.}
+Crack}, a multiplayer game similar to Zynga's Scramble.}
 %
 \cventry{2011 -- 2012\\ Aug -- Apr}{Business Intelligence \& Data
 Warehouses - Corporate Engineering}
 {\weblink{http://www.google.com}{Google} (Vendor),
 \weblink{http://www.globant.com}{Globant}}{Buenos Aires, Argentina}{}{%
+Worked from Google's offices in Buenos Aires as part of a distributed team with
+7 members in Argentina and around 7 in Mountain View, California.
 \begin{itemize}
   \item Developed ETL pipelines in Java for large scale datasets using
-proprietary distributed computing libraries (MapReduce) deployed on Google's
-cloud infrastructure.
+proprietary distributed computing libraries (MapReduce/Dremel) deployed on Google's
+cloud infrastructure (Borg).
   \item Implemented/Maintained several executive dashboards using proprietary
 JavaScript/AJAX data visualization libraries and Data Warehouses.
   \item Maintained a real-time Python/Java Business Intelligence platform to
@@ -82,19 +96,16 @@ monitor credit exposure and revenue risk.
 %
 \cventry{2010}{Undergrad Teaching Assistant}
 {Universidad de Buenos Aires}{Buenos Aires, Argentina}{}{%
-\begin{itemize}%
-  \item ``Algorithms and Programming I'' and ``Algorithms and Programming II''.
-\end{itemize}
 }
 %
 \cventry{2009 -- 2010\\ Oct -- Jun}{Software Engineer}
 {\weblink{http://www.3dgames.com.ar}{3DGames}}{Buenos Aires, Argentina}{}{%
 \begin{itemize}
   \item Migrated the web site of \weblink{http://club.speedy.com.ar}{Club
-    Speedy} (Membership Reward Program of one of the largest ISPs in Argentina)
+    Speedy} (Membership Reward Program of one of Argentina's largest ISPs)
     from various PHP applications to a fully integrated site developed with
-    Ruby on Rails. Responsible of meetings with the client and of designing,
-    implementing and deploying the web site.
+    Ruby on Rails. Responsible of meeting with the client to define
+    requirements and of designing, implementing and deploying the website.
   \item Participated in the implementation of a Single Sign--On solution for
     the 3DG Platform using the Central Authentication Service
     (\weblink{http://en.wikipedia.org/wiki/Central_Authentication_Service}{CAS})
@@ -109,68 +120,37 @@ monitor credit exposure and revenue risk.
 \cventry{2007 -- 2008\\ Jul -- Aug}{Java Developer/Consultant}
 {\weblink{http://www.newtechnologies.com.ar}{New Technologies S.R.L.}}{Buenos
 Aires, Argentina}{}{%
-Participated in a team developing Java applications, and
-worked as an internal and external consultant.
+Started with an internship during my studies and then continued to work
+part--time until I got a scholarship from the DAAD.\\
+Participated in a small team developing Java applications, and also worked as
+an internal and external consultant.
 \begin{itemize}
   \item Developed a workflow based web application to track and optimize the
     Procurement Process of the \weblink{http://www.telefonica.com/}{``Grupo
-    Telefónica''} in Argentina.  Tools used: jBPM, Tapestry, Spring, Hibernate,
+    Telefónica''} in Argentina. Tools used: jBPM, Tapestry, Spring, Hibernate.
     HttpUnit (for web scraping).
-  %\item Implemented prototype applications on J2EE in order to evaluate the
-    %adoption of different technologies (JavaServer Faces and Mule).
 \end{itemize}
 }
 
-% \section{Profile} Versatile \& pragmatic developer with strong theoretical
-% knowledge and practical experience ranging from system programming in
-% low--level languages to graphic and web applications in high--level
-% languages. Interested in developing for mobile platforms (specially for
-% Android).
-
-% Proactive, self--taught, quick--learner, goal oriented. Able to work
-% effectively both as part of small/big teams as well as alone on own
-% motivation.  Deep understanding and use of FLOSS (Free Libre Open Source
-% Software) development methodologies and tools. Used to working under pressure
-% and meeting demanding deadlines.
-
 \section{Technical Skills}
-\cvitem{Proficient in:}{Java, Python, GNU/Linux.}
-\cvitem{Acquainted with:}{Ruby, CoffeeScript, JavaScript, C, C++, SQL, HTML, CSS.}
+\cvitem{Proficient in:}{Ruby, Java, GNU/Linux.}
+\cvitem{Acquainted with:}{Python, CoffeeScript, JavaScript, C, C++, SQL, HTML, CSS.}
 \cvitem{Worked with:}{%
   \begin{minipage}[t]{\linewidth}\small
     \begin{itemize}
-      \item Ruby On Rails, RSpec, jQuery, jQuery UI.
-      \item Backbone.js, Bootstrap.
+      \item AWS (Amazon EC2, Amazon DynamoDB, Amazon SWF, Amazon SQS, etc.).
+      \item Spring, Hibernate, Jackson, Jersey, JUnit, TestNG.
+      \item Ruby On Rails, RSpec, jQuery, jQuery UI, Backbone.js, Bootstrap.
       \item Apache Hadoop, Apache Pig, Apache Kafka.
-      \item Google Proprietary Technology.
+      \item Google Proprietary Technology (Borg, MapReduce, FlumeJava, Dremel).
       \item Android SDK.
       \item Perforce, git, darcs, svn, Mercurial.
-      \item Bash, Eclipse, Vim, JUnit, Apache 2, Apache Tomcat, MySQL.
+      \item Bash, Eclipse, Vim, Apache 2, Apache Tomcat, MySQL.
     \end{itemize}
   \end{minipage}
 }
 \cvitem{OOP}{Experienced in Object--oriented design and programming. Knowledge
 of Design Patterns and UML.}
-% \begin{itemize}
-% \item Deep web development knowledge, ranging from back--end programming in
-% Ruby, Java and PHP, to front--end programming using JavaScript and HTML + CSS.
-% Knowledge of back--end frameworks (Rails, Tapestry) and front--end libraries
-% (jQuery, jQuery UI). Prefer back--end rather than front--end programming.
-% \item Object--oriented design and programming.
-% \item Strong practical knowledge of Java, Ruby, C++ and C.
-% \item Experience teaching programming with Python and using it to make small
-% programs and utilities.
-% \item Concurrent and network programming, including POSIX threads, BSD sockets,
-% TCP/IP and POSIX IPC (Inter--Process Communication) experience.
-% \item GNU/Linux systems specialist. More than 10 years of experience as user
-% and administrator. Knowledge about its architecture, best--practices, shell
-% scripting,  and web (Apache 2, Tomcat) \& database (MySQL) servers
-% administration.
-% \item Practical and theoretical knowledge of networking protocols (IP, TCP/IP,
-% UDP, etc.) and application protocols over IP (HTTP, SMTP, POP 3, DNS, etc.).
-% \item Network administration: firewalling (iptables), advanced routing, NAT.
-% \item Basic knowledge of the Android SDK and mobile programming.
-% \end{itemize}
 
 \section{Languages}
 \cvitemwithcomment{English}{Fluent}{First Certificate Exam (passed with grade
@@ -191,8 +171,8 @@ A), Cambridge, 2001}
 is a web IDE that runs in the browser, but lives in a server. It was developed
 for the \weblink{http://labi.fi.uba.ar/club_robotica.html}{Robotics Club} of
 the Faculty of Engineering of the UBA, and allows them to edit and compile
-programs for different microcontroller architectures from anywhere, anytime. It
-allows the versioning of the projects using Mercurial.}
+programs for different microcontroller architectures from anywhere, at any
+time. It supports versioning of projects using Mercurial.}
 \cvitem{\mbox{\weblink{http://yanf.sourceforge.net/}{yanf}}\\2001}{Yanf
 $[$C$]$ is a deprecated news fetcher coded by me, when I was 16 and web RSS
 readers were not popular. It was published under the GPL v2 license, but is no
